ecs-service.tf
resource "aws_ecs_service" "app_service" {

  name = "app-service"

  cluster = aws_ecs_cluster.main.id

  task_definition = aws_ecs_task_definition.app.arn

  desired_count = 2

  launch_type = "EC2"

  load_balancer {

    target_group_arn = aws_lb_target_group.ecs_tg.arn

    container_name = "nginx"

    container_port = 80
  }

  depends_on = [
    aws_lb_listener.http
  ]
}
